<resources>
    <string name="app_name">mypetproject</string>
    <string name="Movies_Details_Name_of_the_movie">Name of the movie</string>
    <string name="Movies_Details_Realise_Date">Realise Date:&#160;</string>
    <string name="Movies_Details_Realise_Date_date">21 april 2005</string>
    <string name="Movies_Details_Overview">Overview</string>
    <string name="Movies_Details_Score">Score:&#160;</string>
    <string name="Movies_Details_Score_number">7.9</string>
    <string name="Movies_Details_description">description of movie details</string>
    <string name="Actors_Details_title">Name of the actors</string>
    <string name="Actors_Details_biography">Biography</string>
    <string name="Actors_Details_Name">Actors name</string>
    <string name="Review_Details_title">Title</string>
    <string name="Review_Details_content">Content</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="introduce_local_variable">Introduce local variable</string>
    <string name="toolbar_menu">TheMovieDB</string>
    <string name="https_image_tmdb">https://image.tmdb.org/t/p/w500</string>
    <string name="favorites">Favorites</string>
</resources>