<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.MoviesDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movies_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Movies_Details_Name_of_the_movie"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movies_details_header_container_card"
            android:layout_width="392dp"
            android:layout_height="219dp"
            android:layout_margin="8dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movies_details_title">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movies_details_image_banner"
                android:layout_width="507dp"
                android:layout_height="300dp"
                android:background="@color/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movies_details_header_container_card" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movies_details_body_container_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:background="@color/mr_cast_progressbar_progress_and_thumb_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movies_details_header_container_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movies_details_body_container_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background2"
                android:padding="4dp">

                <TextView
                    android:id="@+id/movies_details_body_overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Movies_Details_Overview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movies_details_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Movies_Details_Realise_Date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movies_details_body_overview_label" />

                <TextView
                    android:id="@+id/movies_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Movies_Details_Realise_Date_date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/movies_details_date_label"
                    app:layout_constraintTop_toBottomOf="@id/movies_details_body_overview_label" />

                <TextView
                    android:id="@+id/movies_details_score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Movies_Details_Score"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movies_details_date_label" />

                <TextView
                    android:id="@+id/movies_details_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Movies_Details_Score_number"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/movies_details_score_label"
                    app:layout_constraintTop_toBottomOf="@id/movies_details_date" />

                <TextView
                    android:id="@+id/movies_details_body_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/Movies_Details_description"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movies_details_score_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:background="@color/background"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="152dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewActors"
                    android:layout_width="match_parent"
                    android:layout_height="159dp"
                    android:background="@color/background"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:itemCount="5"
                    tools:listitem="@layout/card_view_design_actors" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="393dp"
            android:layout_height="475dp"
            android:layout_margin="5dp"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    tools:listitem="@layout/card_view_design_review" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="401dp"
            android:layout_height="140dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movies_details_body_container_card">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcVideosRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_trailer" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>